Make sure cropped image uses full tile width. Use office scale for tiles with office.

--- a/src/plonetheme/eeq/theme/less/tiles.less
+++ b/src/plonetheme/eeq/theme/less/tiles.less
@@ -4,6 +4,9 @@
       margin-bottom: 3rem !important;
       height: 100%!important;
       .cardTop {
+        img {
+          width: 100%;
+        }
         text-align: center;
         > a {
           z-index: 2;
